--- a/styles/pages/00-landing.css
+++ b/styles/pages/00-landing.css
@@ -1,3 +1,3 @@
 /* Section Backgrounds */
 
-/* main.landing { background: center/cover url(/img/bg/new-bg-landing.png); } */
+main.landing { background: center/cover url(/img/bg/foe-bg-landing.png); }
